# FSIV

./: .gitignore
Practica1/: CMakeLists.txt  Main.cpp  auxiliarFunctions.cpp  auxiliarFunctions.hpp
Practica2/: CMakeLists.txt  Main.cpp  auxiliarFunctions.cpp  auxiliarFunctions.hpp
Practica3/: .CMakeLists.txt.swp  .IO.mp4.swp  .MOV_0063.mp4.swp  .Main.cpp.swp  .auxiliarFunctions.cpp.swp  .auxiliarFunctions.hpp.swp  .output.yml.swp  .pattern.png.swp  CMakeLists.txt  Main.cpp  auxiliarFunctions.cpp  auxiliarFunctions.hpp  output.yml
Practica4/: CMakeLists.txt  vseg.cpp  vseg2.cpp  vsegbase.cpp
TrabajoFinal/: CMakeLists.txt  classifier.yml  common_code.cpp  common_code.hpp  dictionary.yml  fic.txt  test_bovw.cpp  train_bovw.cpp
TrabajoFinal/ymlFiles/: classifierDAISY.yml  classifierDAISY5cat.yml  classifierDSIFT.yml  classifierDSIFT_05Cat.yml  classifierSIF5cat.yml  classifierSIFT.yml  classifierSUFT10cattegories.yml  classifierSURF.yml  classifierSURF200kw.yml  dictionaryDAISY.yml  dictionaryDAISY5cat.yml  dictionaryDSIFT.yml  dictionaryDSIFT_05Cat.yml  dictionarySIFT.yml  dictionarySIFT5cat.yml  dictionarySURF.yml  dictionarySURF10cattegories.yml  dictionarySURF200.yml
cv_tutorial/: CMakeLists.txt  introduction_to_svm.cpp  key.cpp  prg1.cpp  prg2.cpp  prg3.cpp
